# RealTimeEdgeDetection

./: ARCHITECTURE_DIAGRAM.txt  CAMERA_INTEGRATION.md  COMPLETE_CHANGES.md  DOCUMENTATION_INDEX.md  EdgeDetectionViewer.ts  FINAL_CHECKLIST.md  FINAL_SUMMARY.txt  FPS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  QUICK_START_WEB_VIEWER.txt  README.md  README_FILTERS_DIAGNOSTICS.md  README_IMPLEMENTATION.md  README_WEB.md  UI_IMPROVEMENTS.md  UI_UPDATES.md  build_output.txt  index.html  main.d.ts  main.d.ts.map  main.js  main.js.map  main.ts  package.json  settings.gradle.kts  tsconfig.json
app/: build.gradle.kts
app/src/androidTest/java/com/example/realtimeedgedetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: viewer.html
app/src/main/assets/webapp/: index.html  main.js  main.ts  package.json  tsconfig.json
app/src/main/cpp/: CMakeLists.txt  image_processor.cpp  image_processor.h  native-lib.cpp
app/src/main/java/com/example/realtimeedgedetection/: BitmapUtils.java  CameraManager.kt  FilterType.kt  (+17 more)
app/src/main/res/drawable/: capture_button_background.xml  ic_flip_camera.xml  ic_record.xml  ic_videocam.xml  record_button_background.xml  round_button_background.xml
app/src/main/res/layout/: activity_main.xml  activity_photo_result.xml  activity_realtime_camera.xml  activity_web_viewer.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
